speckit improved backend and frontend